objects/DynamicRelatedListElement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ButtonLabel__c</fullName>
        <label>Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ButtonName__c</fullName>
        <label>Button Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescendingOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descending Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LayoutNumber__c</fullName>
        <label>Layout Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Button, Link, Field, OrderBy, Limit</inlineHelpText>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Dynamic Related List Element</label>
</CustomObject>